--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" /> 
+    <meta name="google-site-verification" content="ZBZbqLXm5QoqgLr5Cs_Yi0W60B6IwQneY13_tV-wyls" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>رأفت عصام - الموقع التعريفي</title>
     <meta name="theme-color" content="#0d6efd"/>
+         <meta name="description" content="مطور واجهات امامية ,مبرمج محترف خبرة اكتر من ثلاثة سنوات  ,مصمم اكتر من 45 موقع ذوي واجهات مختلفة ">
+    <meta name="keywords" content="رافت عصام الموقع الرسمي ,رافت عصام محمد ">
  <link rel="Icon" href="ras.jpg">
     <!-- Bootstrap CSS -->
     <link
